--- a/src/modules/core/components/home.css
+++ b/src/modules/core/components/home.css
@@ -1160,6 +1160,54 @@ body {
     width: 2500px;
     inline-size: 100%;
   }
+
+  .price_section .detail-box {
+    /* padding: 20px; */
+    background: #fff;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+  }
+  
+  .price_section .top-box {
+    background: #27ae60;
+    padding: 2em 0 5em;
+    /* border-bottom: 1px solid #ddd; */
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    position: relative;
+    overflow: hidden; /* Ensures the SVG is contained within the box */
+  }
+  
+  .pricing-divider-img {
+    position: absolute;
+    bottom: -20px;
+    left: -5px;
+    width: 100%;
+    height: 80px;
+  }
+  
+  .price_section .price_features {
+    list-style: none;
+    padding: 0;
+  }
+  
+  .price_section .btn-box {
+    text-align: center;
+    margin-top: 20px;
+  }
+  
+  .price_section .btn-box a {
+    text-decoration: none;
+    background: #007bff;
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 5px;
+  }
+  
+  .price_section .btn-box a:hover {
+    background: #0056b3;
+  }
+  
   
   
 
